--- a/index.html
+++ b/index.html
@@ -825,8 +825,8 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
     // ===== CONFIG =====
-    const SUPABASE_URL = "PASTE_YOUR_SUPABASE_URL";
-    const SUPABASE_ANON_KEY = "PASTE_YOUR_SUPABASE_ANON_KEY";
+    const SUPABASE_URL = "https://buwzzxpzcwjihvylfzom.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJ1d3p6eHB6Y3dqaWh2eWxmem9tIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjYzNDUwMTIsImV4cCI6MjA4MTkyMTAxMn0.5vYMVieAY_AAKdCw6_Y-aR21UJrl0A-AE-ayWPw-L54";
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     // ===== refs =====
