--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Simple Auth + Profile (Supabase)</title>
+  <title>Auth + Leader Card (Supabase)</title>
   <style>
     :root{
       --bg0:#070a10;
@@ -32,7 +32,7 @@
       padding: 16px;
     }
     .card{
-      width: min(520px, 100%);
+      width: min(560px, 100%);
       border-radius: var(--r1);
       background: var(--panel);
       border: 1px solid var(--line);
@@ -52,6 +52,7 @@
       font-size: 12px;
       color: var(--muted);
       min-height: 16px;
+      white-space: pre-wrap;
     }
     .tabs{ display:flex; gap:8px; margin-top: 12px; }
     .tab{
@@ -81,6 +82,7 @@
       font-size: 13px;
     }
     .field::placeholder{ color: rgba(255,255,255,.35); }
+
     .btn{
       border-radius: 14px;
       border: 1px solid rgba(var(--accent), .35);
@@ -114,6 +116,7 @@
       font-size: 12px;
       color: rgba(255,255,255,.92);
     }
+
     .profile{
       margin-top: 14px;
       border-radius: 18px;
@@ -140,24 +143,25 @@
     .hint{ font-size: 12px; color: var(--muted); }
     .fileRow{ display:flex; gap:10px; align-items:center; }
     .fileName{ font-size:12px; color: var(--muted); white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
+    .hr{ height:1px; background: rgba(255,255,255,.10); margin: 10px 0; border-radius: 99px; }
   </style>
 </head>
 
 <body>
   <div class="card">
-    <div class="title">AUTH / PROFILE</div>
+    <div class="title">AUTH / LEADER CARD</div>
     <div class="sub" id="msg"></div>
 
     <div class="tabs" id="tabs">
-      <button class="tab active" id="tLogin">Вход</button>
-      <button class="tab" id="tReg">Регистрация</button>
+      <button class="tab active" id="tLogin" type="button">Вход</button>
+      <button class="tab" id="tReg" type="button">Регистрация</button>
     </div>
 
     <!-- LOGIN -->
     <div class="form" id="loginForm">
       <input class="field" id="emailL" placeholder="Email" autocomplete="email" />
       <input class="field" id="passL" placeholder="Пароль" type="password" autocomplete="current-password" />
-      <button class="btn" id="loginBtn">Войти</button>
+      <button class="btn" id="loginBtn" type="button">Войти</button>
     </div>
 
     <!-- REGISTER -->
@@ -166,34 +170,49 @@
         <input class="field" id="emailR" placeholder="Email" autocomplete="email" />
         <input class="field" id="passR" placeholder="Пароль" type="password" autocomplete="new-password" />
       </div>
-      <div class="row">
-        <input class="field" id="loginR" placeholder="Логин" />
-        <input class="field" id="nickR" placeholder="Ник" />
-      </div>
-      <div class="fileRow">
-        <input id="avatarFile" type="file" accept="image/*" style="display:none;" />
-        <button class="btn2" id="pickAvatar">Аватар</button>
-        <div class="fileName" id="avatarName">—</div>
-      </div>
-      <button class="btn" id="regBtn">Создать аккаунт</button>
+      <button class="btn" id="regBtn" type="button">Создать аккаунт</button>
       <div class="hint">Если включено подтверждение email в Supabase — нужно подтвердить почту и затем войти.</div>
     </div>
 
-    <!-- PROFILE VIEW -->
-    <div id="profileArea" style="display:none;">
+    <!-- AUTHED AREA -->
+    <div id="authedArea" style="display:none;">
       <div class="profile">
         <div class="avatar">
           <img id="avatarImg" alt="avatar"
                src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='160' height='160'%3E%3Crect width='160' height='160' fill='%2310111a'/%3E%3Ctext x='50%25' y='56%25' dominant-baseline='middle' text-anchor='middle' font-size='56' fill='white' fill-opacity='.75' font-family='Arial'%3E%3F%3C/text%3E%3C/svg%3E">
         </div>
         <div class="pmeta">
-          <div class="plogin" id="pLogin">—</div>
-          <div class="pnick" id="pNick">—</div>
+          <div class="plogin" id="pNick">—</div>
+          <div class="pnick" id="pDept">—</div>
         </div>
       </div>
 
+      <div class="hr"></div>
+
+      <!-- LEADER EDITOR -->
       <div class="form">
-        <button class="btnDanger" id="logoutBtn">Выйти</button>
+        <div class="row">
+          <input class="field" id="nickI" placeholder="Ник (nick)" />
+          <input class="field" id="deptI" placeholder="Департамент (department)" />
+        </div>
+
+        <div class="row">
+          <input class="field" id="accI" placeholder="Номер аккаунта (account_id)" />
+          <input class="field" id="pointsI" placeholder="Текущее количество АШ (points)" inputmode="numeric" />
+        </div>
+
+        <div class="fileRow">
+          <input id="avatarFile" type="file" accept="image/*" style="display:none;" />
+          <button class="btn2" id="pickAvatar" type="button">Аватар</button>
+          <div class="fileName" id="avatarName">—</div>
+        </div>
+
+        <button class="btn" id="saveLeaderBtn" type="button">Сохранить карточку лидера</button>
+        <button class="btnDanger" id="logoutBtn" type="button">Выйти</button>
+
+        <div class="hint">
+          Сохраняется в таблицу <b>vk_leadboard</b>: department, nick, account_id, avatar_url, points.
+        </div>
       </div>
     </div>
   </div>
@@ -205,12 +224,16 @@
     const SUPABASE_URL = "https://buwzzxpzcwjihvylfzom.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJ1d3p6eHB6Y3dqaWh2eWxmem9tIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjYzNDUwMTIsImV4cCI6MjA4MTkyMTAxMn0.5vYMVieAY_AAKdCw6_Y-aR21UJrl0A-AE-ayWPw-L54";
 
+    // ====== elements ======
     const msg = document.getElementById("msg");
+
     const tLogin = document.getElementById("tLogin");
     const tReg = document.getElementById("tReg");
+    const tabs = document.getElementById("tabs");
+
     const loginForm = document.getElementById("loginForm");
     const regForm = document.getElementById("regForm");
-    const profileArea = document.getElementById("profileArea");
+    const authedArea = document.getElementById("authedArea");
 
     const emailL = document.getElementById("emailL");
     const passL = document.getElementById("passL");
@@ -218,21 +241,27 @@
 
     const emailR = document.getElementById("emailR");
     const passR = document.getElementById("passR");
-    const loginR = document.getElementById("loginR");
-    const nickR = document.getElementById("nickR");
+    const regBtn = document.getElementById("regBtn");
+
+    const pNick = document.getElementById("pNick");
+    const pDept = document.getElementById("pDept");
+    const avatarImg = document.getElementById("avatarImg");
+
+    const nickI = document.getElementById("nickI");
+    const deptI = document.getElementById("deptI");
+    const accI = document.getElementById("accI");
+    const pointsI = document.getElementById("pointsI");
+
     const avatarFile = document.getElementById("avatarFile");
     const pickAvatar = document.getElementById("pickAvatar");
     const avatarName = document.getElementById("avatarName");
-    const regBtn = document.getElementById("regBtn");
 
-    const pLogin = document.getElementById("pLogin");
-    const pNick = document.getElementById("pNick");
-    const avatarImg = document.getElementById("avatarImg");
+    const saveLeaderBtn = document.getElementById("saveLeaderBtn");
     const logoutBtn = document.getElementById("logoutBtn");
 
     function setMsg(text){ msg.textContent = text || ""; }
 
-    // защитная инициализация
+    // ====== supabase init ======
     let supabase = null;
     try{
       if (!window.supabase?.createClient) throw new Error("Supabase SDK не загрузился (CDN).");
@@ -256,6 +285,31 @@
       }
     }
 
+    function setAuthedUI(leader){
+      tabs.style.display = "none";
+      loginForm.style.display = "none";
+      regForm.style.display = "none";
+      authedArea.style.display = "block";
+
+      // header
+      pNick.textContent = leader?.nick || "—";
+      pDept.textContent = leader?.department || "—";
+      if (leader?.avatar_url) avatarImg.src = leader.avatar_url;
+
+      // editor
+      nickI.value = leader?.nick || "";
+      deptI.value = leader?.department || "";
+      accI.value = leader?.account_id || "";
+      pointsI.value = (leader?.points ?? "").toString();
+    }
+
+    function setGuestUI(){
+      authedArea.style.display = "none";
+      tabs.style.display = "flex";
+      showTab("login");
+      setMsg("");
+    }
+
     tLogin.addEventListener("click", () => showTab("login"));
     tReg.addEventListener("click", () => showTab("reg"));
 
@@ -265,9 +319,11 @@
       avatarName.textContent = f ? f.name : "—";
     });
 
-    async function uploadAvatar(userId, file){
+    // ====== helpers ======
+    async function uploadAvatar(ownerId, file){
+      // ownerId — строка (мы используем auth.uid() как текст)
       const ext = (file.name.split(".").pop() || "png").toLowerCase();
-      const path = `${userId}/${Date.now()}.${ext}`;
+      const path = `${ownerId}/${Date.now()}.${ext}`;
 
       const { error: upErr } = await supabase.storage
         .from("avatars")
@@ -279,56 +335,67 @@
       return data.publicUrl;
     }
 
-    async function loadProfile(userId){
+    async function loadLeaderByAccountId(accountId){
       const { data, error } = await supabase
-        .from("profiles")
-        .select("id,login,nick,avatar_url")
-        .eq("id", userId)
+        .from("vk_leadboard")
+        .select("id,nick,points,updated_at,avatar_url,account_id,department")
+        .eq("account_id", accountId)
         .maybeSingle();
 
       if (error) throw error;
       return data || null;
     }
 
-    function setAuthedUI(profile){
-      profileArea.style.display = "block";
-      document.getElementById("tabs").style.display = "none";
-      loginForm.style.display = "none";
-      regForm.style.display = "none";
+    async function upsertLeader(payload){
+      // Требует уникальности account_id (см. настройки Supabase ниже)
+      const { data, error } = await supabase
+        .from("vk_leadboard")
+        .upsert(payload, { onConflict: "account_id" })
+        .select("id,nick,points,updated_at,avatar_url,account_id,department")
+        .single();
 
-      pLogin.textContent = profile?.login || "—";
-      pNick.textContent = profile?.nick || "—";
-      if (profile?.avatar_url) avatarImg.src = profile.avatar_url;
+      if (error) throw error;
+      return data;
     }
 
-    function setGuestUI(){
-      profileArea.style.display = "none";
-      document.getElementById("tabs").style.display = "flex";
-      showTab("login");
-      setMsg("");
-    }
-
+    // ====== auth actions ======
     loginBtn.addEventListener("click", async () => {
       if (!supabase) return;
       setMsg("");
+
       const email = emailL.value.trim();
       const pass = passL.value;
+
+      if (!email || !pass){
+        setMsg("Заполни email и пароль");
+        return;
+      }
 
       const { data, error } = await supabase.auth.signInWithPassword({ email, password: pass });
       if (error){ setMsg(error.message); return; }
 
       const user = data.user;
+      const accountId = String(user.id);
+
       try{
-        const profile = await loadProfile(user.id);
-        if (!profile){
-          setMsg("Нет профиля. Создай через регистрацию.");
-          await supabase.auth.signOut();
-          return;
+        // подставим account_id = uid по умолчанию (чтобы RLS работал)
+        accI.value = accountId;
+
+        let leader = await loadLeaderByAccountId(accountId);
+        if (!leader){
+          // если записи ещё нет — создадим пустую (можешь убрать автосоздание, если не нужно)
+          leader = await upsertLeader({
+            account_id: accountId,
+            nick: "",
+            department: "",
+            points: 0,
+            avatar_url: null
+          });
         }
-        setAuthedUI(profile);
+        setAuthedUI(leader);
       }catch(e){
         console.error(e);
-        setMsg(e.message);
+        setMsg(e.message || "Ошибка загрузки лидера");
       }
     });
 
@@ -338,55 +405,23 @@
 
       const email = emailR.value.trim();
       const pass = passR.value;
-      const login = loginR.value.trim();
-      const nick = nickR.value.trim();
-      const file = avatarFile.files?.[0] || null;
 
-      if (!email || !pass || !login || !nick){
-        setMsg("Заполни поля");
+      if (!email || !pass){
+        setMsg("Заполни email и пароль");
         return;
       }
 
       const { data, error } = await supabase.auth.signUp({ email, password: pass });
       if (error){ setMsg(error.message); return; }
 
-      const user = data.user;
-      if (!user){
-        setMsg("Подтверди email и затем войди.");
+      // Если включено подтверждение email — user может быть null
+      if (!data.user){
+        setMsg("Аккаунт создан. Подтверди email и затем войди.");
         return;
       }
 
-      let avatarUrl = null;
-      try{
-        if (file) avatarUrl = await uploadAvatar(user.id, file);
-      }catch(e){
-        console.error(e);
-      }
-
-      const { error: pErr } = await supabase.from("profiles").insert({
-        id: user.id,
-        login,
-        nick,
-        avatar_url: avatarUrl
-      });
-
-      if (pErr){
-        setMsg(pErr.message);
-        return;
-      }
-
-      // если email confirm выключен — сессия может появиться сразу
-      const s = await supabase.auth.getSession();
-      const authed = s.data?.session?.user;
-
-      if (!authed){
-        setMsg("Аккаунт создан. Подтверди email и войди.");
-        await supabase.auth.signOut();
-        return;
-      }
-
-      const profile = await loadProfile(user.id);
-      setAuthedUI(profile);
+      setMsg("Аккаунт создан. Теперь войди.");
+      showTab("login");
     });
 
     logoutBtn.addEventListener("click", async () => {
@@ -395,10 +430,64 @@
       setGuestUI();
     });
 
-    // небольшие "живые" штуки (не обязательно)
-    document.getElementById("pingPill")?.addEventListener?.("click", ()=>{});
+    // ====== save leader card ======
+    saveLeaderBtn.addEventListener("click", async () => {
+      if (!supabase) return;
+      setMsg("");
 
-    // init session
+      const { data: sess } = await supabase.auth.getSession();
+      const user = sess?.session?.user;
+      if (!user){
+        setMsg("Нет сессии. Войди заново.");
+        setGuestUI();
+        return;
+      }
+
+      const accountId = String(user.id); // ключ для RLS и onConflict
+      const nick = (nickI.value || "").trim();
+      const department = (deptI.value || "").trim();
+      const pointsRaw = (pointsI.value || "").trim();
+      const points = pointsRaw === "" ? 0 : Number(pointsRaw);
+
+      if (!Number.isFinite(points) || points < 0){
+        setMsg("points (АШ) должно быть числом >= 0");
+        return;
+      }
+
+      // account_id в UI показываем, но сохраняем безопасно как uid (чтобы никто не мог писать чужое)
+      accI.value = accountId;
+
+      const file = avatarFile.files?.[0] || null;
+      let avatarUrl = null;
+
+      try{
+        // сохраним текущий url, если не меняли файл
+        const current = await loadLeaderByAccountId(accountId);
+        avatarUrl = current?.avatar_url || null;
+
+        if (file){
+          avatarUrl = await uploadAvatar(accountId, file);
+        }
+
+        const saved = await upsertLeader({
+          account_id: accountId,
+          nick,
+          department,
+          points,
+          avatar_url: avatarUrl
+          // updated_at лучше делать триггером в БД (см. ниже)
+        });
+
+        avatarName.textContent = file ? file.name : "—";
+        setAuthedUI(saved);
+        setMsg("Сохранено ✅");
+      }catch(e){
+        console.error(e);
+        setMsg(e.message || "Ошибка сохранения");
+      }
+    });
+
+    // ====== init ======
     (async function init(){
       if (!supabase) return;
       const { data } = await supabase.auth.getSession();
@@ -407,10 +496,22 @@
         setGuestUI();
         return;
       }
+
       try{
-        const profile = await loadProfile(user.id);
-        if (profile) setAuthedUI(profile);
-        else setGuestUI();
+        const accountId = String(user.id);
+        accI.value = accountId;
+
+        let leader = await loadLeaderByAccountId(accountId);
+        if (!leader){
+          leader = await upsertLeader({
+            account_id: accountId,
+            nick: "",
+            department: "",
+            points: 0,
+            avatar_url: null
+          });
+        }
+        setAuthedUI(leader);
       }catch(e){
         console.error(e);
         setGuestUI();
