--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
   <script>
     // ====== CONFIG ======
     const SUPABASE_URL = "https://buwzzxpzcwjihvylfzom.supabase.co";
-    const SUPABASE_ANON_KEY = "PASTE_YOUR_ANON_KEY_HERE"; // <- оставь свой ключ
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFqYmhmbHBvZWxndXNmaHltaXBpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ4NzEzODMsImV4cCI6MjA4MDQ0NzM4M30.OUBE062cKr4p4KpKlZlWIYCmqCBpXK43tQq9m-laDfg"; // <- оставь свой ключ
     const TABLE = "vk_leadboard";
     const AVATAR_BUCKET = "avatars";
 
