--- a/index.html
+++ b/index.html
@@ -135,12 +135,10 @@
     .pmeta{ min-width:0; }
     .plogin{ font-weight: 900; font-size: 14px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
     .pnick{ margin-top: 6px; font-size: 12px; color: var(--muted); white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
-
     .hint{ font-size: 12px; color: var(--muted); line-height: 1.35; }
     .fileRow{ display:flex; gap:10px; align-items:center; }
     .fileName{ font-size:12px; color: var(--muted); white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
     .sep{ height:1px; background: rgba(255,255,255,.08); margin-top: 12px; }
-    .mini{ font-size:11px; color: rgba(232,238,250,.45); }
   </style>
 </head>
 
@@ -168,7 +166,7 @@
         <input class="field" id="passR" placeholder="Пароль (мин. 6)" type="password" autocomplete="new-password" />
       </div>
       <div class="row">
-        <input class="field" id="loginR" placeholder="Логин (латиница/цифры/_)" />
+        <input class="field" id="loginR" placeholder="Логин (лат/цифры/_)" />
         <input class="field" id="nickR" placeholder="Ник (можно русский)" />
       </div>
 
@@ -180,8 +178,7 @@
 
       <button class="btn" id="regBtn" type="button">Создать аккаунт</button>
       <div class="hint">
-        Если в Supabase включено подтверждение email — после регистрации придёт письмо.
-        Подтверди почту и просто войди — профиль создастся автоматически.
+        Если включено подтверждение email — придёт письмо. После подтверждения просто войди.
       </div>
     </div>
 
@@ -195,7 +192,7 @@
         <div class="pmeta">
           <div class="plogin" id="pLogin">—</div>
           <div class="pnick" id="pNick">—</div>
-          <div class="mini" id="pEmail">—</div>
+          <div class="hint" id="pEmail">—</div>
         </div>
       </div>
 
@@ -207,39 +204,43 @@
     </div>
   </div>
 
-  <!-- Supabase -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <!-- Supabase SDK (надёжный CDN) -->
+  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+
   <script>
+  (function(){
     // ====== твой Supabase ======
-    const SUPABASE_URL = "https://qjbhflpoelgusfhymipi.supabase.co";
-    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFqYmhmbHBvZWxndXNmaHltaXBpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ4NzEzODMsImV4cCI6MjA4MDQ0NzM4M30.OUBE062cKr4p4KpKlZlWIYCmqCBpXK43tQq9m-laDfg";
+    var SUPABASE_URL = "https://qjbhflpoelgusfhymipi.supabase.co";
+    var SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFqYmhmbHBvZWxndXNmaHltaXBpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ4NzEzODMsImV4cCI6MjA4MDQ0NzM4M30.OUBE062cKr4p4KpKlZlWIYCmqCBpXK43tQq9m-laDfg";
 
-    const msg = document.getElementById("msg");
-    const tabsEl = document.getElementById("tabs");
-    const tLogin = document.getElementById("tLogin");
-    const tReg = document.getElementById("tReg");
-    const loginForm = document.getElementById("loginForm");
-    const regForm = document.getElementById("regForm");
-    const profileArea = document.getElementById("profileArea");
+    function $(id){ return document.getElementById(id); }
 
-    const emailL = document.getElementById("emailL");
-    const passL = document.getElementById("passL");
-    const loginBtn = document.getElementById("loginBtn");
+    var msg = $("msg");
+    var tabsEl = $("tabs");
+    var tLogin = $("tLogin");
+    var tReg = $("tReg");
+    var loginForm = $("loginForm");
+    var regForm = $("regForm");
+    var profileArea = $("profileArea");
 
-    const emailR = document.getElementById("emailR");
-    const passR = document.getElementById("passR");
-    const loginR = document.getElementById("loginR");
-    const nickR = document.getElementById("nickR");
-    const avatarFile = document.getElementById("avatarFile");
-    const pickAvatar = document.getElementById("pickAvatar");
-    const avatarName = document.getElementById("avatarName");
-    const regBtn = document.getElementById("regBtn");
+    var emailL = $("emailL");
+    var passL = $("passL");
+    var loginBtn = $("loginBtn");
 
-    const pLogin = document.getElementById("pLogin");
-    const pNick = document.getElementById("pNick");
-    const pEmail = document.getElementById("pEmail");
-    const avatarImg = document.getElementById("avatarImg");
-    const logoutBtn = document.getElementById("logoutBtn");
+    var emailR = $("emailR");
+    var passR = $("passR");
+    var loginR = $("loginR");
+    var nickR = $("nickR");
+    var avatarFile = $("avatarFile");
+    var pickAvatar = $("pickAvatar");
+    var avatarName = $("avatarName");
+    var regBtn = $("regBtn");
+
+    var pLogin = $("pLogin");
+    var pNick = $("pNick");
+    var pEmail = $("pEmail");
+    var avatarImg = $("avatarImg");
+    var logoutBtn = $("logoutBtn");
 
     function setMsg(text){ msg.textContent = text || ""; }
     function setBusy(b){
@@ -249,15 +250,6 @@
       pickAvatar.disabled = b;
       tLogin.disabled = b;
       tReg.disabled = b;
-    }
-
-    let supabase = null;
-    try{
-      if (!window.supabase?.createClient) throw new Error("Supabase SDK не загрузился (CDN).");
-      supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-    }catch(e){
-      console.error(e);
-      setMsg(e.message);
     }
 
     function showTab(which){
@@ -274,92 +266,16 @@
       }
     }
 
-    tLogin.addEventListener("click", () => showTab("login"));
-    tReg.addEventListener("click", () => showTab("reg"));
-
-    pickAvatar.addEventListener("click", () => avatarFile.click());
-    avatarFile.addEventListener("change", () => {
-      const f = avatarFile.files?.[0];
-      avatarName.textContent = f ? f.name : "—";
-    });
-
-    avatarImg.onerror = () => {
-      avatarImg.src = "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='160' height='160'%3E%3Crect width='160' height='160' fill='%2310111a'/%3E%3Ctext x='50%25' y='56%25' dominant-baseline='middle' text-anchor='middle' font-size='56' fill='white' fill-opacity='.75' font-family='Arial'%3E%3F%3C/text%3E%3C/svg%3E";
-    };
-
-    function validLogin(login){
-      // 3-20, латиница/цифры/_
-      return /^[a-zA-Z0-9_]{3,20}$/.test(login);
-    }
-
-    async function uploadAvatar(userId, file){
-      // Требует bucket "avatars" (лучше public для простоты)
-      const ext = (file.name.split(".").pop() || "png").toLowerCase();
-      const path = `${userId}/${Date.now()}.${ext}`;
-
-      const { error: upErr } = await supabase.storage
-        .from("avatars")
-        .upload(path, file, { upsert: true, contentType: file.type });
-
-      if (upErr) throw upErr;
-
-      const { data } = supabase.storage.from("avatars").getPublicUrl(path);
-      return data.publicUrl;
-    }
-
-    async function loadProfile(userId){
-      const { data, error } = await supabase
-        .from("profiles")
-        .select("id,login,nick,avatar_url")
-        .eq("id", userId)
-        .maybeSingle();
-
-      if (error) throw error;
-      return data || null;
-    }
-
-    async function ensureProfile(user){
-      // Если профиля нет — создаём из user_metadata (и/или из pending после confirm)
-      const existing = await loadProfile(user.id);
-      if (existing) return existing;
-
-      let md = user.user_metadata || {};
-      // fallback: если регистрировались при confirm ON, можно достать из localStorage
-      let pending = null;
-      try{ pending = JSON.parse(localStorage.getItem("pending_profile") || "null"); }catch{}
-
-      const login = (md.login || pending?.login || "").trim();
-      const nick  = (md.nick  || pending?.nick  || "").trim();
-
-      if (!login || !nick){
-        // если метаданных нет — просим пересоздать регистрацию нормально
-        throw new Error("Профиль не найден и нет данных для создания. Зарегистрируйся заново.");
-      }
-
-      const payload = { id: user.id, login, nick, avatar_url: md.avatar_url || pending?.avatar_url || null };
-
-      const { error: insErr } = await supabase.from("profiles").insert(payload);
-      if (insErr){
-        // если логин занят или политика не пускает — покажем причину
-        throw insErr;
-      }
-
-      localStorage.removeItem("pending_profile");
-      return await loadProfile(user.id);
-    }
-
     function setAuthedUI(user, profile){
       profileArea.style.display = "block";
       tabsEl.style.display = "none";
       loginForm.style.display = "none";
       regForm.style.display = "none";
 
-      pLogin.textContent = profile?.login || "—";
-      pNick.textContent = profile?.nick || "—";
-      pEmail.textContent = user?.email || "—";
-
-      if (profile?.avatar_url) avatarImg.src = profile.avatar_url;
-      else avatarImg.onerror(); // ставим fallback
+      pLogin.textContent = (profile && profile.login) ? profile.login : "—";
+      pNick.textContent  = (profile && profile.nick)  ? profile.nick  : "—";
+      pEmail.textContent = user && user.email ? user.email : "—";
+      if (profile && profile.avatar_url) avatarImg.src = profile.avatar_url;
     }
 
     function setGuestUI(){
@@ -369,166 +285,196 @@
       setMsg("");
     }
 
-    async function doLogin(){
-      if (!supabase) return;
+    function validLogin(login){
+      return /^[a-zA-Z0-9_]{3,20}$/.test(login);
+    }
+
+    // 1) Проверяем, загрузился ли Supabase SDK
+    if (!window.supabase || !window.supabase.createClient){
+      setMsg("Ошибка: Supabase SDK не загрузился. Проверь интернет/блокировки CDN.");
+      console.error("Supabase SDK not loaded");
+      return;
+    }
+
+    // 2) Создаём клиент
+    var supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
+    // 3) Кнопки/табы — обработчики (проверка клика)
+    tLogin.onclick = function(){ showTab("login"); };
+    tReg.onclick = function(){ showTab("reg"); };
+
+    pickAvatar.onclick = function(){ avatarFile.click(); };
+    avatarFile.onchange = function(){
+      var f = (avatarFile.files && avatarFile.files[0]) ? avatarFile.files[0] : null;
+      avatarName.textContent = f ? f.name : "—";
+    };
+
+    async function loadProfile(userId){
+      var res = await supabase.from("profiles")
+        .select("id,login,nick,avatar_url")
+        .eq("id", userId)
+        .maybeSingle();
+      if (res.error) throw res.error;
+      return res.data || null;
+    }
+
+    async function uploadAvatar(userId, file){
+      // bucket: avatars (Public)
+      var ext = (file.name.split(".").pop() || "png").toLowerCase();
+      var path = userId + "/" + Date.now() + "." + ext;
+
+      var up = await supabase.storage.from("avatars")
+        .upload(path, file, { upsert: true, contentType: file.type });
+      if (up.error) throw up.error;
+
+      var pub = supabase.storage.from("avatars").getPublicUrl(path);
+      return pub && pub.data ? pub.data.publicUrl : null;
+    }
+
+    async function ensureProfile(user){
+      var existing = await loadProfile(user.id);
+      if (existing) return existing;
+
+      // берём из user_metadata или из pending_profile
+      var md = user.user_metadata || {};
+      var pending = null;
+      try{ pending = JSON.parse(localStorage.getItem("pending_profile") || "null"); }catch(e){}
+
+      var login = (md.login || (pending && pending.login) || "").trim();
+      var nick  = (md.nick  || (pending && pending.nick)  || "").trim();
+      var avatar_url = md.avatar_url || (pending && pending.avatar_url) || null;
+
+      if (!login || !nick) throw new Error("Профиль не найден и нет данных для создания.");
+
+      var ins = await supabase.from("profiles").insert({
+        id: user.id,
+        login: login,
+        nick: nick,
+        avatar_url: avatar_url
+      });
+
+      if (ins.error) throw ins.error;
+
+      localStorage.removeItem("pending_profile");
+      return await loadProfile(user.id);
+    }
+
+    loginBtn.onclick = async function(){
       setMsg("");
       setBusy(true);
-
       try{
-        const email = emailL.value.trim();
-        const pass = passL.value;
+        var email = (emailL.value || "").trim();
+        var pass = passL.value || "";
+        if (!email || !pass){ setMsg("Введи email и пароль"); return; }
 
-        if (!email || !pass) { setMsg("Введи email и пароль"); return; }
+        var res = await supabase.auth.signInWithPassword({ email: email, password: pass });
+        if (res.error){ setMsg(res.error.message); return; }
 
-        const { data, error } = await supabase.auth.signInWithPassword({ email, password: pass });
-        if (error) { setMsg(error.message); return; }
-
-        const user = data.user;
-        const profile = await ensureProfile(user);
+        var user = res.data.user;
+        var profile = await ensureProfile(user);
         setAuthedUI(user, profile);
       }catch(e){
         console.error(e);
-        setMsg(e?.message || String(e));
-        // если профиль не создался — выходим
-        try{ await supabase.auth.signOut(); }catch{}
+        setMsg(e && e.message ? e.message : String(e));
+        try{ await supabase.auth.signOut(); }catch(_){}
         setGuestUI();
       }finally{
         setBusy(false);
       }
-    }
+    };
 
-    async function doRegister(){
-      if (!supabase) return;
+    regBtn.onclick = async function(){
       setMsg("");
       setBusy(true);
-
       try{
-        const email = emailR.value.trim();
-        const pass = passR.value;
-        const login = loginR.value.trim();
-        const nick = nickR.value.trim();
-        const file = avatarFile.files?.[0] || null;
+        var email = (emailR.value || "").trim();
+        var pass = passR.value || "";
+        var login = (loginR.value || "").trim();
+        var nick  = (nickR.value || "").trim();
+        var file = (avatarFile.files && avatarFile.files[0]) ? avatarFile.files[0] : null;
 
-        if (!email || !pass || !login || !nick){
-          setMsg("Заполни все поля");
-          return;
-        }
-        if (pass.length < 6){
-          setMsg("Пароль минимум 6 символов");
-          return;
-        }
-        if (!validLogin(login)){
-          setMsg("Логин: 3–20 символов, только латиница/цифры/_");
-          return;
-        }
+        if (!email || !pass || !login || !nick){ setMsg("Заполни все поля"); return; }
+        if (pass.length < 6){ setMsg("Пароль минимум 6 символов"); return; }
+        if (!validLogin(login)){ setMsg("Логин: 3–20 символов, только латиница/цифры/_"); return; }
 
-        let avatarUrl = null;
-        if (file){
-          try{ avatarUrl = await uploadAvatar("temp", file); } catch {}
-          // Важно: до user.id мы не знаем путь. Поэтому грузим аватар после signUp, если user вернулся.
-          avatarUrl = null;
-        }
+        // сохраняем данные на случай confirm ON
+        localStorage.setItem("pending_profile", JSON.stringify({ login: login, nick: nick, avatar_url: null }));
 
-        // сохраняем “на всякий” (для confirm ON)
-        localStorage.setItem("pending_profile", JSON.stringify({ login, nick, avatar_url: null }));
-
-        const { data, error } = await supabase.auth.signUp({
-          email,
+        var res = await supabase.auth.signUp({
+          email: email,
           password: pass,
-          options: {
-            data: { login, nick } // попадёт в user_metadata
-          }
+          options: { data: { login: login, nick: nick } }
         });
+        if (res.error){ setMsg(res.error.message); return; }
 
-        if (error){ setMsg(error.message); return; }
+        // если confirm ON — обычно нет сессии
+        var sess = await supabase.auth.getSession();
+        var user = sess.data && sess.data.session ? sess.data.session.user : null;
 
-        const user = data.user;
-
-        // Если confirm ON — user может быть null или не будет активной сессии
-        const s = await supabase.auth.getSession();
-        const authedUser = s.data?.session?.user || null;
-
-        if (!authedUser){
-          setMsg("Аккаунт создан. Проверь почту, подтверди email и затем войди.");
+        if (!user){
+          setMsg("Аккаунт создан. Подтверди email и затем войди.");
           return;
         }
 
-        // Теперь знаем user.id — грузим аватар в правильную папку
-        let finalAvatarUrl = null;
+        var avatarUrl = null;
         if (file){
           try{
-            finalAvatarUrl = await uploadAvatar(authedUser.id, file);
+            avatarUrl = await uploadAvatar(user.id, file);
           }catch(e){
             console.error(e);
           }
         }
 
-        // Обновим metadata аватара (не обязательно, но удобно)
         try{
-          await supabase.auth.updateUser({ data: { login, nick, avatar_url: finalAvatarUrl }});
-        }catch{}
+          await supabase.auth.updateUser({ data: { login: login, nick: nick, avatar_url: avatarUrl } });
+        }catch(_){}
 
-        // запишем pending (на случай если insert будет после перезагрузки)
-        localStorage.setItem("pending_profile", JSON.stringify({ login, nick, avatar_url: finalAvatarUrl }));
+        localStorage.setItem("pending_profile", JSON.stringify({ login: login, nick: nick, avatar_url: avatarUrl }));
 
-        const profile = await ensureProfile({ ...authedUser, user_metadata: { login, nick, avatar_url: finalAvatarUrl }});
-        setAuthedUI(authedUser, profile);
+        var profile = await ensureProfile({ id: user.id, email: user.email, user_metadata: { login: login, nick: nick, avatar_url: avatarUrl } });
+        setAuthedUI(user, profile);
 
       }catch(e){
         console.error(e);
-        setMsg(e?.message || String(e));
+        setMsg(e && e.message ? e.message : String(e));
       }finally{
         setBusy(false);
       }
-    }
+    };
 
-    loginBtn.addEventListener("click", doLogin);
-    regBtn.addEventListener("click", doRegister);
-
-    // Enter в полях
-    [emailL, passL].forEach(el => el.addEventListener("keydown", (e)=>{ if(e.key==="Enter") doLogin(); }));
-    [emailR, passR, loginR, nickR].forEach(el => el.addEventListener("keydown", (e)=>{ if(e.key==="Enter") doRegister(); }));
-
-    logoutBtn.addEventListener("click", async () => {
-      if (!supabase) return;
+    logoutBtn.onclick = async function(){
       setBusy(true);
       try{
         await supabase.auth.signOut();
+        setGuestUI();
+      }catch(e){
+        console.error(e);
+        setMsg(e && e.message ? e.message : String(e));
       }finally{
         setBusy(false);
-        setGuestUI();
       }
-    });
+    };
 
-    // init session + реакция на изменение
-    (async function init(){
-      if (!supabase) return;
-      const { data } = await supabase.auth.getSession();
-      const user = data?.session?.user || null;
-      if (!user){
-        setGuestUI();
-        return;
-      }
+    // init
+    (async function(){
+      setMsg("Инициализация...");
       try{
-        const profile = await ensureProfile(user);
+        var sess = await supabase.auth.getSession();
+        var user = (sess.data && sess.data.session) ? sess.data.session.user : null;
+        if (!user){
+          setGuestUI();
+          return;
+        }
+        var profile = await ensureProfile(user);
         setAuthedUI(user, profile);
+        setMsg("");
       }catch(e){
         console.error(e);
         setGuestUI();
+        setMsg("");
       }
     })();
-
-    supabase?.auth?.onAuthStateChange?.(async (event, session) => {
-      const user = session?.user || null;
-      if (!user){ setGuestUI(); return; }
-      try{
-        const profile = await ensureProfile(user);
-        setAuthedUI(user, profile);
-      }catch(e){
-        console.error(e);
-        setGuestUI();
-      }
-    });
+  })();
   </script>
 </body>
 </html>
